--- a/src/rating/templates/rating/happinessrating.html
+++ b/src/rating/templates/rating/happinessrating.html
@@ -9,5 +9,7 @@
         <link href="{% static 'css/materialize.min.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
         <link href="{% static 'css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
     </head>
-
+<body>
+  <h1>Hello, world!</h1>
+</body>
 </html>
