--- a/src/rating/templates/rating/happinessrating.html
+++ b/src/rating/templates/rating/happinessrating.html
@@ -6,8 +6,8 @@
         <title>Happiness</title>
         <!-- CSS  -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link href="{% static 'css/materialize.min.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
-        <link href="{% static 'css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+        <link href="{% static '/materialize/css/materialize.min.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+        <link href="{% static '/materialize/css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
     </head>
 <body>
   <h1>Hello, world!</h1>
