--- a/src/rating/templates/rating/happinessrating.html
+++ b/src/rating/templates/rating/happinessrating.html
@@ -11,11 +11,11 @@
     </head>
 <body>
   <div class="appbody valign-wrapper no-pad-bot" id="index-banner">
-    <div class="container" style="width: 100%;height: 100%;max-width: 100%;margin: auto;">
+    <div class="container flexbox"style="width: 100%;height: 100%;max-width: 100%;margin: auto;">
       <br><br>
 
       <div class="row" style="width: 100%;height: 100%;">
-        <div class="valign-wrapper">
+        <div class="valign-wrapper flexbox">
           <div class="happinessbar">
               <ul class="smileyRatingBarList">
                 <li>
@@ -60,7 +60,6 @@
                   </div>
                 </li>
               </ul>
-
           </div>
         </div>
       </div>
