[ 169499638 ] Change id íconBox to class semantically

--- a/src/rating/templates/rating/happinessrating.html
+++ b/src/rating/templates/rating/happinessrating.html
@@ -19,7 +19,7 @@
           <div class="happinessbar">
               <ul class="smileyRatingBarList">
                 <li>
-                  <div id="iconBox" class="bn-meter">
+                  <div class="iconBox bn-meter">
                     <a href="index.html">
                       <img class="bn-hover-show" src="{% static '/img/assets-happinessbar/Icon_HeelSlecht_wit.png' %}" title="Gaat slecht">
                       <img class="bn-hover-hidden" src="{% static '/img/assets-happinessbar/Icon_HeelSlecht.png' %}" title="Gaat slecht">
@@ -27,7 +27,7 @@
                   </div>
                 </li>
                 <li>
-                  <div id="iconBox" class="bn-meter">
+                  <div class="iconBox bn-meter">
                     <a href="index.html">
                       <img class="bn-hover-show" src="{% static '/img/assets-happinessbar/Icon_MinderGoed_wit.png' %}" title="Kan beter">
                       <img class="bn-hover-hidden" src="{% static '/img/assets-happinessbar/Icon_MinderGoed.png' %}" title="Kan beter">
@@ -35,7 +35,7 @@
                   </div>
                 </li>
                 <li>
-                  <div id="iconBox" class="bn-meter">
+                  <div class="iconBox bn-meter">
                     <a href="index.html">
                       <img class="bn-hover-show" src="{% static '/img/assets-happinessbar/Icon_Neutraal_wit.png' %}" title="Ok">
                       <img class="bn-hover-hidden" src="{% static '/img/assets-happinessbar/Icon_Neutraal.png' %}" title="Ok">
@@ -43,7 +43,7 @@
                   </div>
                 </li>
                 <li>
-                  <div id="iconBox" class="bn-meter">
+                  <div class="iconBox bn-meter">
                     <a href="index.html">
                       <img class="bn-hover-show" src="{% static '/img/assets-happinessbar/Icon_GaatGoed_wit.png' %}" title="Gaat goed">
                       <img class="bn-hover-hidden" src="{% static '/img/assets-happinessbar/Icon_GaatGoed.png' %}" title="Gaat goed">
@@ -51,7 +51,7 @@
                   </div>
                 </li>
                 <li>
-                  <div id="iconBox" class="bn-meter">
+                  <div class="iconBox bn-meter">
                     <a href="index.html">
                       <img class="bn-hover-show" src="{% static '/img/assets-happinessbar/Icon_HeelGoed_wit.png' %}" title="Fantastisch">
                       <img class="bn-hover-hidden" src="{% static '/img/assets-happinessbar/Icon_HeelGoed.png' %}" title="Fantastisch">
