--- a/src/rating/static/materialize/css/style.css
+++ b/src/rating/static/materialize/css/style.css
@@ -60,7 +60,7 @@ background-color: var(--AppBackgroundColor);
   padding: 0 0 0 0 !important;
 }
 
-.happinessbar > .smileyRatingBarList > li > #iconBox > a > img  {
+.happinessbar > .smileyRatingBarList > li > .iconBox > a > img  {
   width: 100%;
   height: 100%;
 }
@@ -101,18 +101,18 @@ background-color: var(--AppBackgroundColor);
 /* CSS HappinessMeter Transitions           */
 /*------------------------------------------*/
 
-#iconBox img.bn-hover-hidden:hover {
+.iconBox img.bn-hover-hidden:hover {
   opacity:0;
 }
 
-#iconBox {
+.iconBox {
   position:relative;
   height: var(--IconListSize);
   width: var(--IconListSize);
   margin:0 auto;
 }
 
-#iconBox img {
+.iconBox img {
   position:absolute;
   left:0;
   -webkit-transition: opacity 0.5s ease-in-out;
