[ 169499638 ] Change to Materialize CDN

--- a/src/rating/static/css/style.css
+++ b/src/rating/static/css/style.css
@@ -94,7 +94,7 @@ background-color: var(--AppBackgroundColor);
 
 .smileyRatingBarList > li {
   display: inline-block;
-  width: 42px;
+  width: var(--IconListSize);
 }
 
 /*------------------------------------------*/
