--- a/src/rating/templates/rating/happinessrating.html
+++ b/src/rating/templates/rating/happinessrating.html
@@ -6,15 +6,17 @@
         <title>Happiness</title>
         <!-- CSS  -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link href="{% static '/materialize/css/materialize.min.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
-        <link href="{% static '/materialize/css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <!-- Custom CSS additions -->
+        <link href="{% static '/css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
     </head>
 <body>
-  <div class="appbody valign-wrapper no-pad-bot" id="index-banner">
+  <div class="appbody no-pad-bot" id="index-banner">
     <div class="container flexbox"style="width: 100%;height: 100%;max-width: 100%;margin: auto;">
-      <br><br>
-
-      <div class="row" style="width: 100%;height: 100%;">
+      <div class="row" style="width: 100%;">
         <div class="valign-wrapper flexbox">
           <div class="happinessbar">
               <ul class="smileyRatingBarList">
@@ -55,7 +57,6 @@
                     <a href="index.html">
                       <img class="bn-hover-show" src="{% static '/img/assets-happinessbar/Icon_HeelGoed_wit.png' %}" title="Fantastisch">
                       <img class="bn-hover-hidden" src="{% static '/img/assets-happinessbar/Icon_HeelGoed.png' %}" title="Fantastisch">
-
                     </a>
                   </div>
                 </li>
