--- a/src/rating/static/css/style.css
+++ b/src/rating/static/css/style.css
@@ -1,4 +1,3 @@
-{% load static %}
 /* Custom Stylesheet */
 /**
  * Use this file to override Materialize files so you can update
@@ -13,89 +12,115 @@
 .icon-block .material-icons {
 	font-size: inherit;
 }
+
 /*------------------------------------------*/
 /* Variables                                */
 /*------------------------------------------*/
 :root {
+
 --AppBackgroundColor: #fcfcfc !important;
 --AppTextColor: #272c30 !important;
 --AppFont: Poppins !important;
-
---Happinessbar-background-image: url("/static/img/assets-happinessbar/happiness_bar.png");
-
---HappinessBarWidth: 240px;
+--IconListSize:       42px;
+--HappinessBarWidth:  240px;
 --HappinessBarHeight: 79px;
-
---IconListSize: 42px;
-
+--Happinessbar-background-image: url("/static/img/assets-happinessbar/happiness_bar.png");
 }
 
 /*------------------------------------------*/
 /* App page settings                        */
 /*------------------------------------------*/
 html, body, .appbody {
-height: 100%;
-background-color: var(--AppBackgroundColor);
+
+  height:           100%;
+  background-color: var(--AppBackgroundColor);
 }
+
+/* Set container class to flex */
+.container {
+
+  display:          flex;
+  flex-wrap:        wrap;
+}
+
+.flex-container {
+
+  display:          flex;
+  flex-direction:   column;
+  justify-content:  center;
+  align-items:      center;
+  width:            100%;
+}
+
+.row .col {
+
+  padding:          0 !important;
+  margin-top:       0 !important;
+  margin-bottom:    0 !important;
+}
+
 
 /*------------------------------------------*/
 /* CSS HappinessMeter Default               */
 /*------------------------------------------*/
 .happinessbarTitleDiv {
-  min-width: var(--HappinessBarWidth);
+  min-width:        var(--HappinessBarWidth);
 }
 
 .happinessbarTitle {
-  color: var(--AppTextColor);
-  font-family: var(--AppFont);
-  font-weight: 700;
-  text-align: right;
+
+  color:            var(--AppTextColor);
+  font-family:      var(--AppFont);
+  font-weight:      700;
+  text-align:       right;
 }
 
 .happinessbar {
-  width: var(--HappinessBarWidth);
+
+/*  width:            var(--HappinessBarWidth); */
+  background-size:  var(--HappinessBarWidth);
   background-image: var(--Happinessbar-background-image);
-  background-repeat: no-repeat;
+  background-repeat:   no-repeat;
   background-position: left center;
-  padding: 0 0 0 0 !important;
+  padding:          0 0 0 0 !important;
 }
 
 .happinessbar > .smileyRatingBarList > li > .iconBox > a > img  {
-  width: 100%;
-  height: 100%;
+
+  width:            100%;
+  height:           100%;
 }
 
 .smileyRatingBarList {
-  padding-left: 0;
-  margin-bottom: 0px !important;
-  list-style: none;
+
+  padding-left:     0;
+  margin-bottom:    0px !important;
+  list-style:       none;
 }
 
 /*------------------------------------------*/
 /* CSS HappinessMeter Size specific         */
 /*------------------------------------------*/
-.happinessbar {
-  background-size: var(--HappinessBarWidth);
-  width: var(--HappinessBarWidth !important);
-  height: var(--HappinessBarHeight);
-}
-
 .happinessbar > .happinessbarTitle {
-  position: relative;
-  font-size: 18px;
-  right: 20px;
+
+  position:        relative;
+  font-size:        18px;
+  right:            20px;
 }
 
 .smileyRatingBarList {
-  width: 240px;
-  padding-top: 4px;
-  padding-left: 8px !important;
+
+  width:            var(--HappinessBarWidth);
+  padding-top:      4px;
+  padding-left:     8px !important;
 }
 
 .smileyRatingBarList > li {
-  display: inline-block;
-  width: var(--IconListSize);
+
+  display:          inline-block;
+  width:            var(--IconListSize);
 }
+
 
 /*------------------------------------------*/
 /* CSS HappinessMeter Transitions           */
@@ -106,25 +131,45 @@ background-color: var(--AppBackgroundColor);
 }
 
 .iconBox {
-  position:relative;
-  height: var(--IconListSize);
-  width: var(--IconListSize);
-  margin:0 auto;
+
+  position:       relative;
+  height:         var(--IconListSize);
+  width:          var(--IconListSize);
+  margin:         0 auto;
 }
 
 .iconBox img {
-  position:absolute;
-  left:0;
+
+  position:       absolute;
+  left:           0;
   -webkit-transition: opacity 0.5s ease-in-out;
-  -moz-transition: opacity 0.5s ease-in-out;
-  -o-transition: opacity 0.5s ease-in-out;
-  transition: opacity 0.5s ease-in-out;
+  -moz-transition:    opacity 0.5s ease-in-out;
+  -o-transition:      opacity 0.5s ease-in-out;
+  transition:         opacity 0.5s ease-in-out;
 }
 
-/* test flexbox technique */
-.flexbox {
-  display: flex;
-  flew-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+
+/*------------------------------------------*/
+/* Materialize overrides                    */
+/*------------------------------------------*/
+/* textarea for feedback */
+.ratingfeedback {
+  width:          var(--HappinessBarWidth);
+}
+
+/* fontsize textarea */
+textarea.materialize-textarea {
+   font-size:       13px !important;
+}
+
+
+.input-field textarea:focus + label {
+  color:          #000 !important;
+}
+
+/* label underline focus color */
+.input-field textarea:focus {
+
+  border-bottom:  1px solid #000 !important;
+  box-shadow:     0 1px 0 0 #000 !important;
 }
