[ 169499638 ] Change to .flex-row class Comment out .container css Place inital navbar

--- a/src/rating/templates/rating/happinessrating.html
+++ b/src/rating/templates/rating/happinessrating.html
@@ -29,8 +29,24 @@
 <body>
   <div class="appbody no-pad-bot" id="index-banner">
     <div class="container" style="width: 100%;height: 100%;max-width: 100%;margin: 0;">
+
+
+      <div class="row">
+        <nav>
+          <div class="nav-wrapper">
+            <a href="#!" class="brand-logo"><i class="material-icons">cloud</i>Logo</a>
+            <ul class="right hide-on-med-and-down">
+              <li><a href="sass.html"><i class="material-icons">search</i></a></li>
+              <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
+              <li><a href="collapsible.html"><i class="material-icons">refresh</i></a></li>
+              <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+
       <!-- Container for Nesting -->
-      <div class="flex-container">
+      <div class="flex-row">
       <!-- Ratings bar row -->
         <div class="row">
             <div class="happinessbar"> <!-- This is the Ratings bar with the icons -->
@@ -92,7 +108,6 @@
       </div>
     </div>
 
-    
 
 
 
