--- a/src/rating/static/css/style.css
+++ b/src/rating/static/css/style.css
@@ -38,12 +38,13 @@ html, body, .appbody {
 
 /* Set container class to flex */
 .container {
-
+/*
   display:          flex;
   flex-wrap:        wrap;
+  */
 }
 
-.flex-container {
+.flex-row {
 
   display:          flex;
   flex-direction:   column;
