--- a/src/rating/templates/rating/happinessrating.html
+++ b/src/rating/templates/rating/happinessrating.html
@@ -33,22 +33,18 @@
 
       <div class="row">
         <nav>
-          <div class="nav-wrapper">
-            <a href="#!" class="brand-logo"><i class="material-icons">cloud</i>Logo</a>
-            <ul class="right hide-on-med-and-down">
-              <li><a href="sass.html"><i class="material-icons">search</i></a></li>
-              <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
-              <li><a href="collapsible.html"><i class="material-icons">refresh</i></a></li>
-              <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
-            </ul>
-          </div>
-        </nav>
+            <div class="nav-wrapper">
+              <ul class="left">
+                <li><a href="https://www.jquery-az.com/"><i class="material-icons">dashboard</i></a></li>
+                <li><a href="https://www.jquery-az.com/bootstrap-4/"><i class="material-icons">history</i></a></li>
+              </ul>
+            </div>
+          </nav>
       </div>
 
-      <!-- Container for Nesting -->
-      <div class="flex-row">
-      <!-- Ratings bar row -->
-        <div class="row">
+
+      <div class="flex-row"><!-- Container for Nesting -->
+        <div class="row"><!-- Ratings bar row -->
             <div class="happinessbar"> <!-- This is the Ratings bar with the icons -->
                 <ul class="smileyRatingBarList">
                   <li>
@@ -95,8 +91,8 @@
             </div>
           </div>
 
-    <!-- Rating textfield -->
-      <div class="row">
+
+      <div class="row"><!-- Rating textfield -->
           <form class="col 12">
             <div class="row ratingfeedback">
               <div class="input-field col s12">
