--- a/src/rating/templates/rating/happinessrating.html
+++ b/src/rating/templates/rating/happinessrating.html
@@ -100,6 +100,9 @@
                 <label for="feedbackarea1">Care to give some feedback?</label>
               </div>
           </form>
+          <button class="btn waves-effect waves-brown" type="submit" name="action">Submit Happiness
+            <i class="material-icons right">send</i>
+          </button>
         </div>
       </div>
     </div>
