[ 169499638 ] Fix __base_head.html

--- a/src/rating/templates/rating/__base.html
+++ b/src/rating/templates/rating/__base.html
@@ -1,6 +1,6 @@
  {% load static %}
 <html>
-{% block base_head %}
+{% block head %}
 {% endblock %}
 <header><!-- Main Navigation -->
   <div class="row">
