--- a/src/rating/templates/rating/__base_head.html
+++ b/src/rating/templates/rating/__base_head.html
@@ -1,7 +1,6 @@
-{% load static %}
 {% extends 'rating/__base.html' %}
 
-{% block base_head %}
+{% block head %}
 <head>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
