--- a/src/rating/templates/rating/happinessrating.html
+++ b/src/rating/templates/rating/happinessrating.html
@@ -1,4 +1,18 @@
 {% extends 'rating/__base.html' %}
+{% load static %}
+
+{% block meta %}
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+<title>{% block title %}{% endblock %}</title>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!-- Compiled and minified CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<!-- Custom CSS additions -->
+<link href="{% static '/css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+{% endblock %}
 
 {% block content %}
 <div class="flex-row ratingspage"><!-- Container for Nesting -->
