--- a/src/rating/templates/rating/__base.html
+++ b/src/rating/templates/rating/__base.html
@@ -1,27 +1,16 @@
  {% load static %}
 <html>
 <head>
-  <!--
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
   <title>{% block title %}{% endblock %}</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
   <link href="{% static '/css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
--->
-  {% block meta %}
-  {% endblock %}
-
-<!--  <script type="text/javascript" src="{% static '/js/characterCounter.js' %}"></script>
+  <script type="text/javascript" src="{% static '/js/characterCounter.js' %}"></script>
   <script type="text/javascript" src="{% static '/js/FeatureDiscovery.js' %}"></script>
--->
-
 </head>
-
 
 <body>
   <div class="appbody no-pad-bot" id="index-banner">
