--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -18,7 +18,7 @@
 /*------------------------------------------*/
 :root {
 
---AppBackgroundColor: #fcfcfc !important;
+--AppBackgroundColor: #fff !important;
 --AppTextColor:       #272c30 !important;
 --AppFont:            Poppins !important;
 --PrimaryColor:       #4d4d4d;
